Increased menu bar size and fixed title spacing

--- a/main.css
+++ b/main.css
@@ -24,7 +24,8 @@ i {
 
 .nav-bar {
   margin: 0;
-  padding: 0;
+  padding-top: 8px;
+  padding-bottom: 8px;
   height: 40px;
   width: 100%;
   background-color: #333333;
@@ -36,14 +37,14 @@ i {
 }
 
 .site-title {
+  padding-left: 24px; 
   height: 100%;
   display: flex;
   float: left;
   align-items: center;
   color: white;
   font-family: Raleway;
-  font-size: 30px;
-  padding-left: 16px;
+  font-size: 36px;
   text-align: left;
 }
 
@@ -72,12 +73,10 @@ i {
   display: block;
   text-align: center;
   height: 100%;
-  font-size: 20px;
+  font-size: 24px;
   color: #999999;
   font-family: Raleway;
-  padding: 14px 16px;
-  margin-left: 1px;
-  margin-right: 1px;
+  padding-right:24px;
   text-decoration: none;
 }
 
@@ -111,7 +110,7 @@ i {
   .greeting {
     display: block;
     position: relative;
-    top: 10vh;
+    top: 12vh;
   }
 }
 
@@ -120,11 +119,9 @@ i {
   .greeting {
     display: block;
     position: relative;
-    top: 16vh;
+    top: 17vh;
   }
 }
-
-
 
 .name {
   font-size: 70px;
@@ -151,7 +148,7 @@ i {
 }
 
 .section-container {
-  padding-top: 56px;
+  padding-top: 72px;
   margin-left: 128px;
   margin-right: 128px;
   min-height: 100%;
